objects/SocialInsuranceClaimFlow__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The OmniScript for the social insurance guided claim flow.</description>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Social Insurance Claim Flow</label>
</CustomObject>